--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ languages like Python and Java, while excelling in team coordination and public 
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="img_girl.jpg" alt="Afsa Zafreen Ansari" class="profile-img">
+                    <img src="afsa.jpg" alt="Afsa Zafreen Ansari" class="profile-img">
                     <div class="img-border"></div>
                 </div>
             </div>
