--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ languages like Python and Java, while excelling in team coordination and public 
     <!-- Skills Page -->
     <section id="skills" class="page">
         <div class="container">
-            <h1 class="text-center">Skills & Projects</h1>
-            <p class="text-center">What I can do and what I've built</p>
+            <h1 class="text-center">Skills</h1>
+            <p class="text-center">What I've learnt</p>
             
             <div class="skills-intro">
                 <h2>Skills</h2>
@@ -187,7 +187,7 @@ languages like Python and Java, while excelling in team coordination and public 
                 </div>
                 
                 <div class="academic-card">
-                    <h3>Higher Secondary Education</h3>
+                    <h3>Senior Secondary Education</h3>
                     <p>Kendriya Vidyalaya Sangathan</p>
                     <p>80%</p>
                     <ul class="academic-list">
